Changing URL to URI.
Reviewer: Bo Li
Reviewer: Lance Purple

JiraIssue:DS-15644

Product:broker